profanity filter added

--- a/settings.html
+++ b/settings.html
@@ -23,17 +23,18 @@
         music.loop = true;
         music.play();
     }
-
+    var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
+    var words = json_obj.words;
     var inputType = 1;
     var input = new CanvasInput({
         canvas: document.getElementById('c'),
-        x: 702 / 1920 * window.innerWidth,
-        y: 305 / 1080 * window.innerHeight,
+        x: 700.5 / 1920 * window.innerWidth,
+        y: 300.5 / 1080 * window.innerHeight,
         fontSize: 94 / 1080 * window.innerHeight,
         fontFamily: 'Escapists',
         fontColor: '#212121',
-        width: 645 / 1920 * window.innerWidth,
-        height: 70 / 1080 * window.innerHeight,
+        width: 645.5 / 1920 * window.innerWidth,
+        height: 77 / 1080 * window.innerHeight,
         padding: 0,
         borderWidth: 1,
         borderColor: 'black',
@@ -45,6 +46,8 @@
     var maxNameLength = 15;
 
     var backgroundImage = new Image();
+    var profanity = new Image();
+    var xImage = new Image();
     var ctx;
     var buttons = [];
     var pic = "images/Pages/settings.png";
@@ -58,13 +61,27 @@
         // var musicMutePic = new Image();
         // playerBoosterPic.src = "images/Buttons/music_muted.png"
         ctx = canvas.getContext("2d");
-        backgroundImage.src = pic;
-        backgroundImage.onload = function() {
-            ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+
+
+
+        if (type === "profanity") {
+            profanity.src = "images/profanity.png";
+            profanity.onload = function() {
+                ctx.drawImage(profanity, 510 / 1920 * canvas.width, 90 / 1080 * canvas.height, 900 / 1920 * canvas.width, 900 / 1080 * canvas.height);
+            }
+            xImage.src = "images/x.png";
+            xImage.onload = function() {
+                ctx.drawImage(xImage, 1410 / 1920 * canvas.width, 30 / 1080 * canvas.height, 60 / 1920 * canvas.width, 60 / 1080 * canvas.height);
+            }
+        } else {
+            backgroundImage.src = pic;
+            backgroundImage.onload = function() {
+                ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+            }
+            setTimeout(function() {
+                input.render();
+            }, 400);
         }
-        setTimeout(function() {
-            input.render();
-        }, 400);
     }
 
     if (inputType == 0) {
@@ -74,21 +91,38 @@
         input.destroy();
     }
 
+    function Get(yourUrl) {
+        var Httpreq = new XMLHttpRequest(); // a new request
+        Httpreq.open("GET", yourUrl, false);
+        Httpreq.send(null);
+        return Httpreq.responseText;
+    }
+
+    // function getWordlist() {
+    //     var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
+    //     return json_obj.words;
+    // }
+
     function setName() {
         console.log("set name clicked")
-        if (input.value().length <= maxNameLength && input.value().length != 0) { //LIMIT Name length
+        // var json_obj = JSON.parse(Get("https://raw.githubusercontent.com/web-mech/badwords/master/lib/lang.json"));
+        // var words = json_obj.words;
+        if (input.value().length <= maxNameLength && input.value().length != 0 && !(words.some(words => (input.value()).includes(words)))) { //LIMIT Name length
             console.log("acceptable name")
             localStorage.setItem('name', input.value());
             writeScore(localStorage.getItem('highScore') || 0, localStorage.getItem('name'));
             if (localStorage.getItem('highScore') === null) {
                 localStorage.setItem('highScore', 0);
             }
-            location.reload(200000);
+
+            location.reload();
             // input._x = -200000000;
         } else {
+            console.log("bad name");
+            draw("profanity");
             // input.blur();
-            location.reload();
-            input.destroy();
+            // location.reload(100);
+            // input.destroy();
         }
     };
 
@@ -181,6 +215,7 @@
         addButton(1369 / 1920 * canvasWidth, 295 / 1080 * canvasHeight, 1640 / 1920 * canvasWidth, 392 / 1080 * canvasHeight, setName);
 
         // addButton(103 / 1920 * canvasWidth, 674 / 1080 * canvasHeight, 1640 / 1920 * canvasWidth, 392 / 1080 * canvasHeight, name);
+        addButton(1410 / 1920 * canvasWidth, 30 / 1080 * canvasHeight, 1470 / 1920 * canvasWidth, 90 / 1080 * canvasHeight, draw);
     }
 
     function touches(evt) {
