--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
     if (localStorage.getItem('name') == undefined) {
         localStorage.setItem('name', random_name);
     };
-    writeScore(localStorage.getItem('highScore') || 0, localStorage.getItem('name'));
+    writeScore(localStorage.getItem('highScore') || localStorage.setItem('highScore', 0), localStorage.getItem('name'));
 
     // Add similar event handlers for other events
     // console.log('Orientation is ' + screen.orientation.type);
