--- a/gameOver.html
+++ b/gameOver.html
@@ -24,7 +24,7 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      console.log("loading store background");
+      // console.log("loading store background");
       backgroundImage.src = "images/help.png";
       backgroundImage.onload = function() {
         draw();
