--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
     writeScore(localStorage.getItem('highScore') || localStorage.setItem('highScore', 0), localStorage.getItem('name'));
 
     // Add similar event handlers for other events
-    // console.log('Orientation is ' + screen.orientation.type);
+    // // console.log('Orientation is ' + screen.orientation.type);
     var loadImageProcessing = false;
 
     function init() {
@@ -209,7 +209,7 @@
             } else {
               window.location = "settings.html";
             }
-          // console.log("mute pressed");
+          // // console.log("mute pressed");
           // if (mute === "no") {
           //   mute = "yes";
           //   // music.play();
