--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      console.log("loading store background");
+      // console.log("loading store background");
       backgroundImage.src = "images/store.png?801724";
       backgroundImage.onload = function() {
         draw();
