--- a/pit.html
+++ b/pit.html
@@ -34,7 +34,7 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      console.log("loading store background");
+      // console.log("loading store background");
       backgroundImage.src = "images/Pages/pit.png";
       backgroundImage.onload = function() {
         draw();
