--- a/powerups.html
+++ b/powerups.html
@@ -52,7 +52,7 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      console.log("loading store background");
+      // console.log("loading store background");
       backgroundImage.src = "images/Pages/store.png";
       backgroundImage.onload = function() {
         draw();
